# Federated-DP-Link-Prediction

./: .gitignore  PROJECT_GENESIS.json  README.md  pyproject.toml
configs/: p2_1_confirmatory.json  p2_1_residual_development.json  p2_1_validation_gate.json  p2_2_conditioned_development.json  p2_2_confirmatory.json  p2_pilot.json  p2_validation_gate.json  p3_external_baselines.json  p3_internal_validation.json  p3_master_benchmark.json  p3r_dual_sketch_development.json  p3r_joint_release_boundary_development.json  p3r_joint_release_development.json  p4r_rap_real_stress.json  p4r_rap_synthetic.json  p4r_rap_synthetic_v2.json  p5c2_phase_diagram_development.json  p5f_frontier_validation.json  p5fc_fresh_frontier.json  p6a_dataset_property_matrix.json  p6b_conservative_selector.json  r1_certfedlp_formalization.json  r2a_certificate_synthetic.json  r2b_end_to_end_synthetic.json  r3_feasibility_boundary.json  r3_monte_carlo_calibration.json  r4_lower_bound.json  r5_graph_phase_confirmatory.json
data/: README.md  p2_1_source_registry.json  p2_2_source_registry.json  p5fc_source_registry.json  source_registry.json
docs/: EVIDENCE_POLICY.md  P0_ACCOUNTANT_REDERIVATION.md  P0_CITATION_TRACE_PASS2.md  P0_CLOSEOUT.md  P0_FULLTEXT_AND_CITATION_AUDIT.md  P0_FULLTEXT_REQUESTS.md  P0_LITERATURE_MATRIX.md  P0_LITERATURE_SEARCH_PROTOCOL.md  P0_NOVELTY_AUDIT.md  P0_PROBLEM_DEFINITION.md  P0_RESTRICTED_EVIDENCE_REGISTER.md  P0_REVIEWER_OBJECTIONS.md  P1_CLOSEOUT.md  P1_FEASIBILITY_DERIVATION.md  P1_HARD_RELEASE_AUDIT_PROTOCOL.md  P1_PAIR_FEATURE_PROTOCOL.md  P1_PAIR_FEATURE_REPORT.md  (+98 more)
(+232 files in other folders)
