[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "federated-dp-link-prediction"
version = "0.1.0"
description = "Clean-room research code for federated edge-DP link prediction"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=39,<47",
  "matplotlib>=3.8,<4",
  "networkx>=2.8,<4",
  "numpy>=1.26,<2",
  "scikit-learn>=1.4,<2",
  "scipy>=1.10,<2",
]

[project.optional-dependencies]
test = ["pytest>=8,<10"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
